tests/NormalTests/paczka1/fuzzy1/15709415.err
Error in line 8: U5m8WPAtb A710 85,8
Error in line 27: U5m8WPAtb S421 66,0
